// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should hide the toggle button if no onClick method 1`] = `
<div>
  <div
    class="css-fvpuky"
  >
    <div
      class="select-none md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        Header
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button > should render 1`] = `
<div>
  <div
    class="css-fvpuky"
  >
    <div
      class="select-none cursor-pointer group md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        Header
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100 css-o6tyc"
      >
        <div
          class="css-cp3doq"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="chevron-down-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button > should render collapsed 1`] = `
<div>
  <div
    class="css-13o3tsw"
  >
    <div
      class="select-none cursor-pointer group md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        Header
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100 css-o6tyc"
      >
        <div
          class="css-cp3doq"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="chevron-down-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button > should render expanded 1`] = `
<div>
  <div
    class="css-fvpuky"
  >
    <div
      class="select-none cursor-pointer md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 md:border-b"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        Header
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch css-o6tyc"
      >
        <div
          class="css-cp3doq"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform rotate-180 css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="chevron-down-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button > should render inactive 1`] = `
<div>
  <div
    class="css-js68r5"
  >
    <div
      class="select-none cursor-pointer group md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        Header
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100 css-o6tyc"
      >
        <div
          class="css-cp3doq"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="chevron-down-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button > should render skeleton wrapper 1`] = `
<div>
  <div
    class="flex h-20 items-center px-8 py-4 md:px-4"
    data-testid="AccordionHeaderSkeletonWrapper"
  >
    content
    <div
      class="flex h-full items-center border-theme-secondary-300 pl-4 dark:border-theme-secondary-800 dark:group-hover:border-theme-secondary-700"
    >
      <div
        class="flex h-8 w-8 content-center items-center justify-center rounded-lg bg-theme-background text-theme-secondary-500 ring-1 ring-theme-secondary-300 dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
      >
        <div
          class="css-15txs7d"
          height="10"
          width="10"
        >
          <svg
            id="chevron-down-small"
            viewBox="0 0 10 10"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button > should toggle the accordion on click 1`] = `
<div>
  <div
    class="css-fvpuky"
  >
    <div
      class="select-none cursor-pointer md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 md:border-b"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        Header
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch css-o6tyc"
      >
        <div
          class="css-cp3doq"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform rotate-180 css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="chevron-down-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;
